prevent Yaxis value cut off; added margin top;

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -6,4 +6,5 @@
     flex-wrap: nowrap;
     overflow: hidden;
     column-gap: 10px;
+    margin-top: 20px;
 }
